--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.10.4",
+    "prisma": "^5.7.0",
+    "typescript": "^5.3.3"
   }
 }
