--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "repository": "git@github.com:vedascript/changelog.git",
   "author": "vedansh <me.vedanshwani@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node src/index.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^5.7.0",
     "express": "^4.18.2"
   },
   "devDependencies": {
