made tsconfig compatible with type module

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
       "sourceMap": true,
       "outDir": "dist",
       "lib": ["esnext"],
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "target":"ES6",
+      "module":"ES6",
+      "moduleResolution":"node",
     }
   }
