--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "vedansh <me.vedanshwani@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node --esm src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/node": "^20.10.4",
     "prisma": "^5.7.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
