--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,7 @@
       "target":"ES6",
       "module":"ES6",
       "moduleResolution":"node",
+      "noEmit": true,
+      "allowImportingTsExtensions":true
     }
   }
