--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
     "@types/express": "^4.18.2",
+    "@types/node": "^20.10.4",
     "cors": "^2.8.5",
+    "express-validator": "^7.0.1",
     "morgan": "^1.10.0",
     "prisma": "^5.7.0",
     "ts-node": "^10.9.2",
